--- a/libs/client-web/shared/ui/src/lib/confirmation-dialog/confirmation-dialog.component.html
+++ b/libs/client-web/shared/ui/src/lib/confirmation-dialog/confirmation-dialog.component.html
@@ -8,7 +8,7 @@
   <ng-content />
   <div class="grid grid-cols-2 gap-4 mt-4">
     <p-button
-      data-testId="cancel-button"
+      data-testId="cancel-btn"
       severity="secondary"
       [outlined]="true"
       label="Cancel"
@@ -16,7 +16,7 @@
       styleClass="w-full"
     />
     <p-button
-      data-testId="confirm-button"
+      data-testId="confirm-btn"
       severity="secondary"
       [loading]="loading()"
       label="Confirm"
