--- a/libs/client-web/browse/feature/book/src/lib/book.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/book.component.html
@@ -19,7 +19,7 @@
       <p-skeleton libSkeleton width="100%" height="24rem" />
     </div>
   } @else if (error()) {
-    <div class="flex flex-col items-center gap-4 mt-10">
+    <div class="flex flex-col items-center gap-4 mt-10 col-span-full">
       <p class="text-5xl text-center">{{ error() }}</p>
       <p class="text-xl text-muted-color">
         Unable to load book details. Please try again.
