Used error and retry message component to display error

--- a/libs/client-web/cart/feature/order-process/src/lib/components/payment-method/payment-method.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/components/payment-method/payment-method.component.html
@@ -3,6 +3,14 @@
     <p-skeleton libOrderProcessItem width="100%" height="3rem" />
     <p-skeleton libOrderProcessItem width="100%" height="3rem" />
     <p-skeleton libOrderProcessItem width="100%" height="3rem" />
+  }
+  @if (error()) {
+    <lib-error-and-retry-message
+      [error]="error()"
+      size="small"
+      unableToLoad="credit card"
+      (onRetry)="getCreditCard()"
+    />
   } @else {
     <div>
       <button
