--- a/libs/client-web/cart/feature/order-process/src/lib/order-process.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/order-process.component.html
@@ -26,9 +26,7 @@
             <span class="text-lg text-muted-color">
               Let’s fill it with some great books!
             </span>
-            <a [routerLink]="appRoutePaths.BOOKS()" class="underline"
-              >Browse books</a
-            >
+            <a [routerLink]="booksUrl" class="underline">Browse books</a>
           </div>
         }
       }
