--- a/libs/client-web/cart/feature/order-process/src/lib/order-process.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/order-process.component.html
@@ -3,37 +3,21 @@
 >
   <div class="flex flex-col gap-base">
     <h2 class="text-2xl xl:text-4xl">Cart items</h2>
-    <div
-      class="flex flex-col gap-base"
-      [ngClass]="{
-        loading: cartItemsLoading() && cartItems().length > 0,
-      }"
-    >
-      @if (cartItemsLoading() && cartItems().length === 0) {
-        <lib-cart-item-sekeleton />
-      } @else {
-        @for (cartItem of cartItems(); track cartItem.book.id) {
-          <lib-cart-item
-            [cartItem]="cartItem"
-            (onDelete)="remove(cartItem.book.id)"
-            (onUpdateQuantity)="updateQuantity($event, cartItem.book.id)"
-          />
-        } @empty {
-          <div class="flex flex-col items-center justify-center xl:mt-20">
-            <span class="text-2xl xl:text-4xl text-center">
-              Oops! Your cart is empty.
-            </span>
-            <span class="text-lg text-muted-color">
-              Let’s fill it with some great books!
-            </span>
-            <a [routerLink]="booksUrl" class="underline">Browse books</a>
-          </div>
-        }
-      }
-    </div>
+    <lib-cart-items />
   </div>
   <div class="w-full flex flex-col gap-base">
     <h2 class="text-2xl xl:text-4xl">Checkout form</h2>
-    <lib-summary />
+
+    <div class="flex flex-col gap-base">
+      <div class="flex flex-col gap-base">
+        <lib-delivery-address />
+        <lib-shipping-method />
+        <lib-payment-method />
+      </div>
+
+      <lib-order-price />
+
+      <lib-order-checkout />
+    </div>
   </div>
 </div>
