--- a/libs/client-web/cart/feature/payment-status/src/lib/payment-status.component.html
+++ b/libs/client-web/cart/feature/payment-status/src/lib/payment-status.component.html
@@ -26,9 +26,9 @@
           d="M14.1 27.2l7.1 7.2 16.7-16.8"
         />
       </svg>
-      <span>Pretend that you actually paid for this items :)</span>
+      <span>Pretend that you actually paid for these books :)</span>
       <a
-        [routerLink]="appRoutePaths.ORDERS()"
+        [routerLink]="ordersUrl"
         [queryParams]="{ orderDetailsId: orderDetailsId() }"
         class="text-primary"
       >
