--- a/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
+++ b/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
@@ -17,16 +17,19 @@
   <div class="flex flex-col gap-base p-2">
     <div class="flex flex-col gap-1">
       <h3 class="text-base font-bold truncate">{{ book().title }}</h3>
-      <div class="h-12 overflow-hidden">
-        <div class="flex flex-wrap gap-x-4 gap-y-2">
+      <div class="overflow-hidden">
+        <div class="flex gap-x-4 gap-y-2 truncate">
           @for (author of book().authors; track author.id) {
             <span class="text-muted-color text-sm h-min">
               {{ author.name }}
             </span>
+          } @empty {
+            <span>-</span>
           }
         </div>
       </div>
     </div>
+    <lib-rating-input [readonly]="true" [ngModel]="averageRating()" />
     <div class="flex items-center justify-between">
       <span class="text-lg font-bold">
         {{ book().price | currency: 'USD' }}
