--- a/libs/client-web/browse/feature/books/src/lib/components/filters/filters.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/components/filters/filters.component.html
@@ -1,6 +1,4 @@
-<div
-  class="hidden xl:block sticky top-4 h-content rounded-base overflow-y-auto w-full"
->
+<div class="hidden xl:block rounded-base overflow-y-auto w-full">
   <div class="min-h-min max-w-96 w-full rounded-base overflow-hidden">
     <ng-container [ngTemplateOutlet]="filters" />
   </div>
