--- a/libs/client-web/cart/feature/order-process/src/lib/components/payment-method/payment-method.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/components/payment-method/payment-method.component.html
@@ -3,8 +3,7 @@
     <p-skeleton libOrderProcessItem width="100%" height="3rem" />
     <p-skeleton libOrderProcessItem width="100%" height="3rem" />
     <p-skeleton libOrderProcessItem width="100%" height="3rem" />
-  }
-  @if (error()) {
+  } @else if (error()) {
     <lib-error-and-retry-message
       [error]="error()"
       size="small"
