--- a/libs/client-web/shared/ui/src/lib/books-grid/books-grid.component.html
+++ b/libs/client-web/shared/ui/src/lib/books-grid/books-grid.component.html
@@ -41,7 +41,7 @@
           data-testId="no-books"
           class="w-full mt-12 col-start-1 col-span-full text-center text-4xl font-bold"
         >
-          No books were found!
+          Not found any books!
         </div>
       }
     }
