--- a/apps/client-web/src/styles.scss
+++ b/apps/client-web/src/styles.scss
@@ -16,6 +16,7 @@
   --gap: 2rem;
   --border-radius: 1rem;
   --max-content-height: calc(100svh - 2 * var(--gap));
+  interpolate-size: allow-keywords;
 }
 
 html {
