--- a/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
+++ b/libs/client-web/shared/ui/src/lib/book-card/book-card.component.html
@@ -1,6 +1,6 @@
 <div
   [routerLink]="appRoutePaths.BOOK(book().id)"
-  class="flex flex-col rounded-base p-2 cursor-pointer sm:max-w-book-card w-full bg-content-background"
+  class="flex flex-col rounded-base p-2 cursor-pointer sm:max-w-book-card w-full bg-content-background h-full"
   [ngClass]="{ 'pointer-events-none animate-pulse': loading() }"
 >
   <div class="w-full h-80 4xl:h-96 rounded-base">
@@ -14,22 +14,29 @@
       height="640"
     />
   </div>
-  <div class="flex flex-col gap-base p-2">
-    <div class="flex flex-col gap-1">
-      <h3 class="text-base font-bold truncate">{{ book().title }}</h3>
-      <div class="overflow-hidden">
-        <div class="flex gap-x-4 gap-y-2 truncate">
-          @for (author of book().authors; track author.id) {
-            <span class="text-muted-color text-sm h-min">
-              {{ author.name }}
-            </span>
-          } @empty {
-            <span>-</span>
-          }
+  <div
+    class="flex flex-col gap-base justify-between h-full max-h-[12.5rem] p-2"
+  >
+    <div class="flex flex-col gap-base">
+      <div class="flex flex-col gap-1">
+        <h3 class="text-base font-bold truncate">{{ book().title }}</h3>
+        <div class="overflow-hidden">
+          <div class="flex gap-x-4 gap-y-2 truncate">
+            @for (author of book().authors; track author.id) {
+              <span class="text-muted-color text-sm h-min">
+                {{ author.name }}
+              </span>
+            } @empty {
+              <span>-</span>
+            }
+          </div>
         </div>
       </div>
+      <lib-rating-input [readonly]="true" [ngModel]="averageRating()" />
+      @if (book().tag) {
+        <p-tag class="w-fit" [value]="book().tag" styleClass="text-xs" />
+      }
     </div>
-    <lib-rating-input [readonly]="true" [ngModel]="averageRating()" />
     <div class="flex items-center justify-between">
       <span class="text-lg font-bold">
         {{ book().price | currency: 'USD' }}
