--- a/libs/client-web/browse/feature/book/src/lib/components/price-section/price-section.component.html
+++ b/libs/client-web/browse/feature/book/src/lib/components/price-section/price-section.component.html
@@ -1,7 +1,7 @@
 <h4 class="text-4xl font-bold xl:text-5xl 4xl:text-6xl 6xl:text-7xl">
   {{ book()?.price | currency: 'USD' }}
 </h4>
-<div class="flex flex-col gap-base w-full">
+<div class="@container flex flex-col gap-base w-full">
   @if (availableQuantity() === 0) {
     <div class="flex gap-4">
       <div class="flex items-center">
@@ -49,7 +49,7 @@
       </small>
     </div>
 
-    <div class="flex items-center gap-4">
+    <div class="flex flex-col @sm:flex-row items-center gap-4">
       <p-button
         label="Buy now"
         outlined
