--- a/libs/client-web/account/feature/favourite-books-list/src/lib/favourite-books-list.component.html
+++ b/libs/client-web/account/feature/favourite-books-list/src/lib/favourite-books-list.component.html
@@ -6,7 +6,7 @@
     [loading]="loading()"
     [error]="error()"
     (addToCartEvent)="addToCart($event)"
-    (onAddToFavourite)="addToFavourite($event)"
-    (onRetry)="retry()"
+    (addToFavouriteEvent)="addToFavourite($event)"
+    (retryEvent)="retry()"
   />
 </div>
