Added order summary page

--- a/libs/client-web/account/feature/information/src/lib/components/addresses/addresses.component.html
+++ b/libs/client-web/account/feature/information/src/lib/components/addresses/addresses.component.html
@@ -38,8 +38,8 @@
       <lib-address-information
         [clickable]="false"
         [address]="address"
-        (onEdit)="showForm(address)"
-        (onDelete)="showDeleteDialog(address)"
+        (editEvent)="showForm(address)"
+        (deleteEvent)="showDeleteDialog(address)"
       />
     } @empty {
       <div class="flex items-center flex-col text-center">
