--- a/libs/client-web/cart/feature/order-process/src/lib/components/delivery-address/delivery-address.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/components/delivery-address/delivery-address.component.html
@@ -26,9 +26,9 @@
       <lib-address-information
         [address]="address"
         [isActive]="address.id === selectedAddressId()"
-        (onEdit)="showForm(address)"
-        (onSelect)="selectAddress(address)"
-        (onDelete)="showDeleteDialog(address)"
+        (editEvent)="showForm(address)"
+        (selectEvent)="selectAddress(address)"
+        (deleteEvent)="showDeleteDialog(address)"
       />
     }
     <p-button
