--- a/libs/client-web/cart/feature/cart-sidebar/src/lib/cart-sidebar.component.html
+++ b/libs/client-web/cart/feature/cart-sidebar/src/lib/cart-sidebar.component.html
@@ -28,8 +28,8 @@
       @for (item of cartItems(); track item.book.id) {
         <lib-cart-item
           [cartItem]="item"
-          (onUpdateQuantity)="updateQuantity($event, item.book.id)"
-          (onDelete)="remove(item.book.id)"
+          (updateQuantityEvent)="updateQuantity($event, item.book.id)"
+          (deleteEvent)="remove(item.book.id)"
         />
       } @empty {
         <div class="absolute top-1/2 left-0 right-0 -translate-y-1/2">
