--- a/libs/client-web/cart/ui/src/lib/cart-items/cart-items.component.html
+++ b/libs/client-web/cart/ui/src/lib/cart-items/cart-items.component.html
@@ -1,15 +1,14 @@
 <div
   class="flex flex-col gap-base"
-  [class.animate-pulse.pointer-events-none]="
-    cartItemsLoading() && cartItems.length > 0
-  "
+  [class.animate-pulse.pointer-events-none]="loading() && items.length > 0"
 >
-  @if (cartItemsLoading() && cartItems().length === 0) {
+  @if (loading() && items().length === 0) {
     <lib-cart-item-sekeleton />
   } @else {
-    @for (cartItem of cartItems(); track cartItem.book.id) {
+    @for (cartItem of items(); track cartItem.book.id) {
       <lib-cart-item
         [cartItem]="cartItem"
+        [readonly]="readonly()"
         (deleteEvent)="remove(cartItem.book.id)"
         (updateQuantityEvent)="updateQuantity($event, cartItem.book.id)"
       />
@@ -21,7 +20,7 @@
         <span class="text-lg text-muted-color">
           Let’s fill it with some great books!
         </span>
-        <a [routerLink]="booksUrl" class="underline">Browse books</a>
+        <a [routerLink]="booksUrl()" class="underline">Browse books</a>
       </div>
     }
   }
